2020-02-05  Aakash Jain  <aakash_jain@apple.com>

        [ews] add commit-queue build step to clear flags on patch
        https://bugs.webkit.org/show_bug.cgi?id=206536

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-build/steps.py:
        (BugzillaMixin): Class for common bugzilla related methods.
        (BugzillaMixin.get_bugzilla_api_key): Method to read bugzilla api key from file.
        (BugzillaMixin.remove_flags_on_patch): Method to remove flags on patch.
        (ValidatePatch):
        (RemoveFlagsOnPatch): Class to remove flags on patch.
        (RemoveFlagsOnPatch.start):
        (ValidatePatch._addToLog): Moved.
        (ValidatePatch.fetch_data_from_url): Moved.
        (ValidatePatch.get_patch_json): Moved.
        (ValidatePatch.get_bug_json): Moved.
        (ValidatePatch.get_bug_id_from_patch): Moved.
        (ValidatePatch._is_patch_obsolete): Moved.
        (ValidatePatch._is_patch_review_denied): Moved.
        (ValidatePatch._is_patch_cq_plus): Moved.
        (ValidatePatch._is_bug_closed): Moved.

2020-02-07  Jonathan Bedard  <jbedard@apple.com>

        EWS should run resultsdbpy tests
        https://bugs.webkit.org/show_bug.cgi?id=201928

        Reviewed by Aakash Jain.

        * BuildSlaveSupport/ews-build/factories.py:
        (ServicesFactory.__init__): Add RunResultsdbpyTests.
        * BuildSlaveSupport/ews-build/factories_unittest.py:
        (TestTestsFactory.test_services_factory): Add RunResultsdbpyTests.
        * BuildSlaveSupport/ews-build/steps.py:
        (CheckPatchRelevance): resultsdbpy changes should trigger service tests.
        (RunResultsdbpyTests): Add step which runs resultsdbpy tests.
        * BuildSlaveSupport/ews-build/steps_unittest.py:
        (TestRunResultsdbpyTests):
        (TestRunResultsdbpyTests.setUp):
        (TestRunResultsdbpyTests.tearDown):
        (TestRunResultsdbpyTests.test_success):
        (TestRunResultsdbpyTests.test_failure):
